--- a/springBootProject6/src/main/resources/application.properties
+++ b/springBootProject6/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springBootProject6
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/towhid
+spring.datasource.url=jdbc:mysql://localhost:3306/towhid1
 spring.datasource.username=root
 spring.datasource.password=1234
 
@@ -10,4 +10,11 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8087
 
-spring.mail.host=
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hsstanvir
+spring.mail.password=*jee59jee#
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+image.upload.dir=src/main/resources/static/images
