--- a/springBootProject6/src/main/resources/application.properties
+++ b/springBootProject6/src/main/resources/application.properties
@@ -13,8 +13,9 @@ server.port=8087
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=hsstanvir
-spring.mail.password=*jee59jee#
+spring.mail.password=fjwu utyc icfh ykkc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 image.upload.dir=src/main/resources/static/images
