--- a/springBootProject6/src/main/resources/application.properties
+++ b/springBootProject6/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.port=8087
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hsstanvir
+spring.mail.username=gvfhfv
 spring.mail.password=fjwu utyc icfh ykkc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
