--- a/springBootProject6/src/main/resources/application.properties
+++ b/springBootProject6/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springBootProject6
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/towhid
+spring.datasource.url=jdbc:mysql://localhost:3306/towhid1
 spring.datasource.username=root
 spring.datasource.password=1234
 
@@ -12,8 +12,8 @@ server.port=8087
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=gvfhfv
-spring.mail.password=fjwu utyc icfh ykkc
+spring.mail.username=alammdtowhidul9@gmail.com
+spring.mail.password=euek jqvb bczx gyid
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
