--- a/springBootProject7/src/main/resources/application.properties
+++ b/springBootProject7/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 server.port=8087
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hsstanvir
+spring.mail.password=fjwu utyc icfh ykkc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
