--- a/Flight-Reservation-Spring-boot-MySql-master/Flight-Reservation-Spring-boot-MySql-master/src/main/resources/application.properties
+++ b/Flight-Reservation-Spring-boot-MySql-master/Flight-Reservation-Spring-boot-MySql-master/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=springBootProject6
+server.servlet.context-path=/abc-airlines
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/towhid
+spring.datasource.url=jdbc:mysql://localhost:3306/flight
 spring.datasource.username=root
 spring.datasource.password=1234
 
@@ -12,10 +12,8 @@ server.port=8087
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=alammdtowhidul9@gmail.com
-spring.mail.password=uazw mibh ezhp ljop
-spring.mail.properties.mail.smtp.auth=true
+spring.mail.username=<gmail_id> 
+spring.mail.passd=54
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-
-image.upload.dir=src/main/resources/static/images
+spring.mail.properties.mail.smtworp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
