--- a/Sequrity/practicepharmacy/src/main/resources/application.properties
+++ b/Sequrity/practicepharmacy/src/main/resources/application.properties
@@ -22,6 +22,6 @@ spring.servlet.multipart.max-request-size=10MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=alammdtowhidul9@gmail.com
-spring.mail.password=usdq tuzq ixpv zgxg
+spring.mail.password=jgkj uhbr kcbq psjk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
