--- a/springBootProject6/src/main/resources/application.properties
+++ b/springBootProject6/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=springBootProject6
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/towhid1
+spring.datasource.url=jdbc:mysql://localhost:3306/mysoft
 spring.datasource.username=root
 spring.datasource.password=1234
 
